<resources>
    <string name="app_name">MyLoundryService</string>
    <string name="action_settings">Settings</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="btn_signin">SIGN-IN</string>
    <string name="forgot_password">Forgot password? <u>Click here.</u></string>
    <string name="login">Sign-in</string>
    <string name="pincode">Pin Code</string>
    <string name="sign_up">Sign-Up</string>
    <string name="already_member">Already a member? <u>Login</u> here.</string>
    <string name="terms_conditions">By clicking Sign Up you agree all the <u>Terms and Conditions.</u> </string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="full_name"> Full Name</string>
    <string name="btn_Forgot">Recovery</string>
    <string name="title_activity_main_drawer">MainDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_navigation_drawer">navigation_drawer</string>
</resources>
